# chat-force

./: .dockerignore  .gitignore  CLAUDE.md  Digital-Workforce-Platform-FINAL-v3.1.md  HANDOFF.md  JOURNAL.md  ORCHESTRATOR-PROMPT.md  PIPELINE-TEST-integration-test-1775335665.md  PIVOT-PLAN.md  REQUIREMENTS.md  ROADMAP.md  SMOKE-TEST.md  SPRINT-PLAN.md  factory-blueprint.md  pyproject.toml  pytest.ini
aaa-pure-water/: generate-audio.mjs  install-libs.sh  package.json  render-all.mjs  tsconfig.json
api/: package-lock.json  package.json
api/src/: db.js  (+2 more)
audit/: __init__.py  audit_logger.py  secret_patterns.py
chat_force/: __main__.py  cli.py  statusline.sh
cron/: README.md  morning-briefing.yaml  standing-orders.yaml
docker/: provision.sh
docs/: architecture.md  claude-agent-sdk-deep-dive.md  harness-schema.md
mechanic/: Dockerfile  entrypoint.sh
mechanics/: evaluation-criteria.yaml  mechanic-a-prompt.md  mechanic-c-scout-prompt.md
media-toolkit/: cli.js  cli.test.mjs  healthcheck.js  package-lock.json  package.json
orchestrator/: __init__.py  langgraph.json  requirements.txt
pipeline/: changeset_extractor.py  config.py  credential_proxy.py  deliverables.py  disk_cleanup.py  harness_loader.py  main.py  mechanic_manager.py  pr_creator.py  requirements.txt  response_parser.py  retry.py  scrub.py  session_manager.py  session_store.py  slack_format.py  slack_handler.py  slack_listener.py  webhook_server.py  worker_manager.py
platform/: base-config.yaml  exec-approvals.json  tools.yaml
scraper/: scraper.py
scripts/: git-pre-push-hook.sh  smoke_test.py
(+183 files in other folders)
